--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
                 <div class="col-md-6 col-sm-12">
                     <div class="jumbotron">
-                        <h1 class="display-4">Centro Ambulatorio Mixto</h1>
+                        <h1 class="display-4">Centro Ambulatorio </br>Mixto</h1>
                         <p class="lead">● NEMESIO ALVAREZ 372, MORENO, PROVINCIA DE BS. AS.</p>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3282.3793927142005!2d-58.79361388468675!3d-34.645120367197094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s%E2%97%8F%20NEMESIO%20ALVAREZ%20372%2C%20MORENO%2C%20PROVINCIA%20DE%20BS.%20AS.!5e0!3m2!1ses!2sar!4v1592515230123!5m2!1ses!2sar" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                         <hr class="my-4">
