--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
                     <div class="jumbotron">
                         <h1 class="display-4">Comunidad terapéutica de mujeres</h1>
                         <p class="lead">● AV. LIBERTADOR 2085. MORENO, PROVINCIA DE BS. AS.</p>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3282.3793927142005!2d-58.79361388468675!3d-34.645120367197094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s%E2%97%8F%20NEMESIO%20ALVAREZ%20372%2C%20MORENO%2C%20PROVINCIA%20DE%20BS.%20AS.!5e0!3m2!1ses!2sar!4v1592515230123!5m2!1ses!2sar" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                        <hr class="my-4">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.060939876147!2d-58.781230284687176!3d-34.62790026628525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc95cbb9acd805%3A0x6741b3921d21dad1!2sAv.%20del%20Libertador%202085%2C%20B1744%20Moreno%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1592516388603!5m2!1ses!2sar" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>                        <hr class="my-4">
                         <div class="container">
                             <div class="row">
                                 <div class="atencion col-sm-12">
